--- a/TestTaskCoin/MVVM/Views/DetailsPage.xaml
+++ b/TestTaskCoin/MVVM/Views/DetailsPage.xaml
@@ -8,61 +8,93 @@
       d:DesignHeight="460" d:DesignWidth="800"
       Title="Details">
 
-    <Grid>
-        <Grid Margin="20">
-            <StackPanel>
-                <TextBlock Text="Cryptocurrency Details" 
-                       FontSize="24" 
-                       FontWeight="Bold" 
-                       Margin="0,0,0,20"/>
+    <Grid Background="White" Margin="10,0,10,0">
+        <Grid.RowDefinitions>
+            <!-- Header -->
+            <RowDefinition Height="Auto" />
+            <!-- Data -->
+            <RowDefinition Height="336" />
+            <!-- Buttons -->
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
 
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="Auto"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="Auto"/>
-                    </Grid.RowDefinitions>
+        <!-- Header -->
+        <TextBlock Grid.Row="0" Text="Cryptocurrency Details" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,0,0,10" />
+        
+        <!-- Data -->
+        <Border Grid.Row="1" BorderBrush="Black" BorderThickness="1" CornerRadius="10" Margin="10">
+            <Grid Margin="20">
+                <StackPanel>
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
 
-                    <!-- Rank -->
-                    <TextBlock Text="Rank:" Grid.Row="0" Grid.Column="0" FontWeight="Bold" Margin="0,0,10,10"/>
-                    <TextBlock Text="{Binding SelectedCryptocurrency.Rank}" Grid.Row="0" Grid.Column="1" Margin="0,0,0,10"/>
+                        <Grid Margin="0,25,0,0" Grid.Column="0" HorizontalAlignment="Stretch">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
 
-                    <!-- Name -->
-                    <TextBlock Text="Name:" Grid.Row="1" Grid.Column="0" FontWeight="Bold" Margin="0,0,10,10"/>
-                    <TextBlock Text="{Binding SelectedCryptocurrency.Name}" Grid.Row="1" Grid.Column="1" Margin="0,0,0,10"/>
+                            <!-- Rank -->
+                            <TextBlock Text="Rank:" Grid.Row="0" Grid.Column="0" FontWeight="Bold" Margin="0,0,10,10"/>
+                            <TextBlock Text="{Binding SelectedCryptocurrency.Rank}" Grid.Row="0" Grid.Column="1" Margin="0,0,0,10"/>
 
-                    <!-- Symbol -->
-                    <TextBlock Text="Symbol:" Grid.Row="2" Grid.Column="0" FontWeight="Bold" Margin="0,0,10,10"/>
-                    <TextBlock Text="{Binding SelectedCryptocurrency.Symbol}" Grid.Row="2" Grid.Column="1" Margin="0,0,0,10"/>
+                            <!-- Name -->
+                            <TextBlock Text="Name:" Grid.Row="1" Grid.Column="0" FontWeight="Bold" Margin="0,0,10,10"/>
+                            <TextBlock Text="{Binding SelectedCryptocurrency.Name}" Grid.Row="1" Grid.Column="1" Margin="0,0,0,10"/>
 
-                    <!-- Supply -->
-                    <TextBlock Text="Supply:" Grid.Row="3" Grid.Column="0" FontWeight="Bold" Margin="0,0,10,10"/>
-                    <TextBlock Text="{Binding SelectedCryptocurrency.Supply, StringFormat={}{0:N2}$}" Grid.Row="3" Grid.Column="1" Margin="0,0,0,10"/>
+                            <!-- Symbol -->
+                            <TextBlock Text="Symbol:" Grid.Row="2" Grid.Column="0" FontWeight="Bold" Margin="0,0,10,10"/>
+                            <TextBlock Text="{Binding SelectedCryptocurrency.Symbol}" Grid.Row="2" Grid.Column="1" Margin="0,0,0,10"/>
 
-                    <!-- Price -->
-                    <TextBlock Text="Price (USD):" Grid.Row="4" Grid.Column="0" FontWeight="Bold" Margin="0,0,10,10"/>
-                    <TextBlock Text="{Binding SelectedCryptocurrency.PriceUsd, StringFormat={}{0:N2}$}" Grid.Row="4" Grid.Column="1" Margin="0,0,0,10"/>
+                            <!-- Supply -->
+                            <TextBlock Text="Supply:" Grid.Row="3" Grid.Column="0" FontWeight="Bold" Margin="0,0,10,10"/>
+                            <TextBlock Text="{Binding SelectedCryptocurrency.Supply, StringFormat={}{0:N2}$}" Grid.Row="3" Grid.Column="1" Margin="0,0,0,10"/>
 
-                    <!-- Volume -->
-                    <TextBlock Text="Volume (USD):" Grid.Row="5" Grid.Column="0" FontWeight="Bold" Margin="0,0,10,10"/>
-                    <TextBlock Text="{Binding SelectedCryptocurrency.VolumeUsd24Hr, StringFormat={}{0:N2}$}" Grid.Row="5" Grid.Column="1" Margin="0,0,0,10"/>
+                            <!-- Price -->
+                            <TextBlock Text="Price (USD):" Grid.Row="4" Grid.Column="0" FontWeight="Bold" Margin="0,0,10,10"/>
+                            <TextBlock Text="{Binding SelectedCryptocurrency.PriceUsd, StringFormat={}{0:N2}$}" Grid.Row="4" Grid.Column="1" Margin="0,0,0,10"/>
 
-                    <!-- Change 24h -->
-                    <TextBlock Text="24h Change:" Grid.Row="6" Grid.Column="0" FontWeight="Bold" Margin="0,0,10,10"/>
-                    <TextBlock Text="{Binding SelectedCryptocurrency.ChangePercent24Hr, StringFormat={}{0:N2}%}" Grid.Row="6" Grid.Column="1" Margin="0,0,0,10"/>
-                </Grid>
+                            <!-- Volume -->
+                            <TextBlock Text="Volume (USD):" Grid.Row="5" Grid.Column="0" FontWeight="Bold" Margin="0,0,10,10"/>
+                            <TextBlock Text="{Binding SelectedCryptocurrency.VolumeUsd24Hr, StringFormat={}{0:N2}$}" Grid.Row="5" Grid.Column="1" Margin="0,0,0,10"/>
 
-                <!-- Back Button -->
-                <Button Content="Back" HorizontalAlignment="Left" Margin="0,20,0,0" Padding="20,5"/>
-            </StackPanel>
-        </Grid>
+                            <!-- Change 24h -->
+                            <TextBlock Text="24h Change:" Grid.Row="6" Grid.Column="0" FontWeight="Bold" Margin="0,0,10,10"/>
+                            <TextBlock Text="{Binding SelectedCryptocurrency.ChangePercent24Hr, StringFormat={}{0:N2}%}" Grid.Row="6" Grid.Column="1" Margin="0,0,0,10"/>
+                        </Grid>
+                        <Grid Grid.Column="1" HorizontalAlignment="Stretch">
+                            <StackPanel>
+                                <TextBlock Text="Markets" HorizontalAlignment="Center" FontSize="18" FontWeight="Bold"/>
+                                <DataGrid ItemsSource="{Binding Markets}" AutoGenerateColumns="False" HorizontalAlignment="Stretch" VerticalScrollBarVisibility="Auto" Height="250">
+                                    <DataGrid.Columns>
+                                        <!-- ExchangeId Column -->
+                                        <DataGridTextColumn Header="Exchange" Binding="{Binding ExchangeId}" Width="*"/>
+                                        <DataGridTextColumn Header="Quote" Binding="{Binding QuoteSymbol}" Width="*"/>
+                                        <DataGridTextColumn Header="Price (USD)" Binding="{Binding PriceUsd, StringFormat={}{0:N2}}" Width="*"/>
+                                    </DataGrid.Columns>
+                                </DataGrid>
+                            </StackPanel>
+                        </Grid>
+                    </Grid>
+
+                    
+                </StackPanel>
+            </Grid>
+        </Border>
+
+        <!-- Buttons -->
+        <Button Grid.Row="2" Content="Back" Margin="0,10,0,0" HorizontalAlignment="Left" Padding="10,5"/>
     </Grid>
 </Page>
