--- a/TestTaskCoin/MVVM/Views/SearchPage.xaml
+++ b/TestTaskCoin/MVVM/Views/SearchPage.xaml
@@ -23,12 +23,26 @@
 
         <!-- Data -->
         <Border Grid.Row="1" BorderBrush="Black" BorderThickness="1" CornerRadius="10">
-            <Grid Margin="20">
-                <StackPanel>
-                    <TextBox Width="300" Height="40" Margin="10" Text="{Binding SearchQuery}" FontSize="16" />
-                    <Button Content="Search" Width="100" Height="40" Margin="10" Command="{Binding SearchCommand}" />
-                </StackPanel>
-            </Grid>
+            <StackPanel>
+                <Grid Margin="20,20">
+                    <Border Background="LightGray" BorderBrush="Black" BorderThickness="1" CornerRadius="20"/>
+                    <Border Background="White" BorderBrush="Black" BorderThickness="1" Margin="17,12">
+                        <TextBox Text="{Binding SearchQuery}" BorderThickness="0" FontSize="28" Margin="9,0" />
+                    </Border>
+                </Grid>
+                <Grid Margin="20, 0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+                    <StackPanel Grid.Column="0">
+                        <Label Margin="0, 10" Content="Search by symbol (BTC)" FontSize="22"/>
+                        <Label Margin="0, 10" Content="Search by name (Bitcoin)" FontSize="22"/>
+                        <Label Margin="0, 10" Content="Search by rank (0-2000)" FontSize="22"/>
+                        <Button Content="Search" Command="{Binding SearchCommand}" HorizontalAlignment="Right" Width="100" Padding="10.5"/>
+                    </StackPanel>
+                </Grid>
+            </StackPanel>
         </Border>
 
         <!-- Buttons -->
