--- a/TestTaskCoin/MVVM/Views/DetailsPage.xaml
+++ b/TestTaskCoin/MVVM/Views/DetailsPage.xaml
@@ -22,9 +22,10 @@
         <TextBlock Grid.Row="0" Text="Cryptocurrency Details" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,0,0,10" />
         
         <!-- Data -->
-        <Border Grid.Row="1" BorderBrush="Black" BorderThickness="1" CornerRadius="10" Margin="10">
+        <Border Grid.Row="1" BorderBrush="Black" BorderThickness="1" CornerRadius="10">
             <Grid Margin="20">
                 <StackPanel>
+                    
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
@@ -88,13 +89,21 @@
                             </StackPanel>
                         </Grid>
                     </Grid>
-
                     
                 </StackPanel>
             </Grid>
         </Border>
 
         <!-- Buttons -->
-        <Button Grid.Row="2" Content="Back" Margin="0,10,0,0" HorizontalAlignment="Left" Padding="10,5"/>
+        <Grid Grid.Row="2" Margin="0,10,0,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <Button Grid.Column="0" Content="Back" HorizontalAlignment="Left" Margin="10,0,0,0" Padding="10,5"/>
+            <Button Grid.Column="1" Content="Chart" HorizontalAlignment="Right" Margin="0,0,10,0" 
+                    Command="{Binding NavigateToChartCommand}" Padding="10,5"/>
+        </Grid>
     </Grid>
 </Page>
