--- a/TestTaskCoin/MVVM/Views/ChartPage.xaml
+++ b/TestTaskCoin/MVVM/Views/ChartPage.xaml
@@ -4,11 +4,55 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:TestTaskCoin.MVVM.Views"
+      xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ChartPage">
 
-    <Grid Background="White">
-        
+    <Grid Background="White" Margin="10,0,10,0">
+        <Grid.RowDefinitions>
+            <!-- Header -->
+            <RowDefinition Height="Auto" />
+            <!-- Chart -->
+            <RowDefinition Height="336" />
+            <!-- Buttons -->
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
+
+        <!-- Header -->
+        <TextBlock Text="{Binding SelectedCryptocurrencyId}" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,0,0,10" />
+
+        <!-- Chart -->
+        <Border Grid.Row="1" BorderBrush="Black" BorderThickness="1" CornerRadius="10">
+            <lvc:CartesianChart x:Name="lvcChart" Visibility="Visible" Series="{Binding SeriesCollection}">
+                <lvc:CartesianChart.DataTooltip>
+                    <lvc:DefaultTooltip/>
+                </lvc:CartesianChart.DataTooltip>
+
+                <lvc:CartesianChart.AxisX>
+                    <lvc:Axis FontSize="12" Labels="{Binding Labels}">
+                        <lvc:Axis.Separator>
+                            <lvc:Separator/>
+                        </lvc:Axis.Separator>
+                    </lvc:Axis>
+                </lvc:CartesianChart.AxisX>
+                <lvc:CartesianChart.AxisY>
+                    <lvc:Axis FontSize="12" LabelFormatter="{Binding YFormatter}">
+                        <lvc:Axis.Separator>
+                            <lvc:Separator/>
+                        </lvc:Axis.Separator>
+                    </lvc:Axis>
+                </lvc:CartesianChart.AxisY>
+            </lvc:CartesianChart>
+        </Border>
+
+        <!-- Buttons -->
+        <Grid Grid.Row="2" Margin="0,10,0,0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <Button Grid.Column="0" Content="Back" HorizontalAlignment="Left" Margin="10,0,0,0" Padding="10,5"/>
+        </Grid>
     </Grid>
 </Page>
