--- a/TestTaskCoin/MVVM/Views/ChartPage.xaml
+++ b/TestTaskCoin/MVVM/Views/ChartPage.xaml
@@ -20,11 +20,11 @@
         </Grid.RowDefinitions>
 
         <!-- Header -->
-        <TextBlock Text="{Binding SelectedCryptocurrencyId}" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,0,0,10" />
+        <TextBlock Text="Chart" FontSize="20" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,0,0,10" />
 
         <!-- Chart -->
         <Border Grid.Row="1" BorderBrush="Black" BorderThickness="1" CornerRadius="10">
-            <lvc:CartesianChart x:Name="lvcChart" Visibility="Visible" Series="{Binding SeriesCollection}">
+            <lvc:CartesianChart x:Name="lvcChart" Visibility="Visible" LegendLocation="Right" Series="{Binding SeriesCollection}">
                 <lvc:CartesianChart.DataTooltip>
                     <lvc:DefaultTooltip/>
                 </lvc:CartesianChart.DataTooltip>
@@ -50,9 +50,15 @@
         <Grid Grid.Row="2" Margin="0,10,0,0">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
             <Button Grid.Column="0" Content="Back" HorizontalAlignment="Left" Margin="10,0,0,0" Padding="10,5"/>
+            <StackPanel Grid.Column="1" HorizontalAlignment="Right" Orientation="Horizontal">
+                <Button Content="Day" Command="{Binding DayCommand}" Margin="0,0,10,0" Padding="10,5"/>
+                <Button Content="Week" Command="{Binding WeekCommand}" Margin="0,0,10,0" Padding="10,5"/>
+                <Button Content="Month" Command="{Binding MonthCommand}" Margin="0,0,10,0" Padding="10,5"/>
+            </StackPanel>
         </Grid>
     </Grid>
 </Page>
