--- a/TestTaskCoin/MVVM/Views/ChartPage.xaml
+++ b/TestTaskCoin/MVVM/Views/ChartPage.xaml
@@ -53,7 +53,7 @@
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
 
-            <Button Grid.Column="0" Content="Back" HorizontalAlignment="Left" Margin="10,0,0,0" Padding="10,5"/>
+            <Button Grid.Column="0" Command="{Binding GoBackCommand}" Content="Back" HorizontalAlignment="Left" Margin="10,0,0,0" Padding="10,5"/>
             <StackPanel Grid.Column="1" HorizontalAlignment="Right" Orientation="Horizontal">
                 <Button Content="Day" Command="{Binding DayCommand}" Margin="0,0,10,0" Padding="10,5"/>
                 <Button Content="Week" Command="{Binding WeekCommand}" Margin="0,0,10,0" Padding="10,5"/>
