--- a/TestTaskCoin/MVVM/Views/DetailsPage.xaml
+++ b/TestTaskCoin/MVVM/Views/DetailsPage.xaml
@@ -100,8 +100,8 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-
-            <Button Grid.Column="0" Content="Back" HorizontalAlignment="Left" Margin="10,0,0,0" Padding="10,5"/>
+    
+            <Button Grid.Column="0" Command="{Binding GoBackCommand}" Content="Back" HorizontalAlignment="Left" Margin="10,0,0,0" Padding="10,5"/>
             <Button Grid.Column="1" Content="Chart" HorizontalAlignment="Right" Margin="0,0,10,0" 
                     Command="{Binding NavigateToChartCommand}" Padding="10,5"/>
         </Grid>
